# qt-project-template

./: .gitignore  CMakeLists.txt  compile.sh
app/: CMakeLists.txt
scripts/: compile-qt.sh  cp.sh
